--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     <title>EnviroCast</title>
   </head>
   <body>
-    Hello
+  <div class="top-box">
+      <h1>EnviroCast</h1>
+  </div>
+  <div class="middle-box">
+    <div class="card-container">
+      <div class="card">
+        <p>Brampton</p>
+      </div>
+      <div class="card">
+        <p>Toronto</p>
+    </div>
+      <div class="card">
+        <p>Mississauga</p>
+      </div>
+    </div>
+    </div>
+  </div>
+  <div class="bottom-box">
+    
+  </div>
   </body>
 </html>
